--- a/package.json
+++ b/package.json
@@ -46,6 +46,11 @@
     "@ckeditor/ckeditor5-paste-from-office": "^16.0.0",
     "@ckeditor/ckeditor5-table": "^16.0.0",
     "@ckeditor/ckeditor5-theme-lark": "^16.0.0",
+    "@ckeditor/ckeditor5-editor-inline": "^16.0.0",
+    "@ckeditor/ckeditor5-autosave": "^16.0.0",
+    "@ckeditor/ckeditor5-clipboard": "^16.0.0",
+    "@ckeditor/ckeditor5-font": "^16.0.0",
+    "@ckeditor/ckeditor5-remove-format": "^16.0.0",
     "eslint": "^5.5.0",
     "eslint-config-ckeditor5": "^2.0.0",
     "husky": "^1.3.1",
@@ -56,7 +61,7 @@
     "raw-loader": "^3.1.0",
     "style-loader": "^1.0.0",
     "terser-webpack-plugin": "^2.2.1",
-    "webpack": "^4.39.1",
+    "webpack": "^4.41.2",
     "webpack-cli": "^3.3.6"
   },
   "engines": {
